--- a/worker-app-pod.yml
+++ b/worker-app-pod.yml
@@ -10,4 +10,12 @@ spec:
   containers: 
   - name: worker-app
     image: dockersamples/examplevotingapp_worker
+    resources:
+      requests:
+        cpu: "150m"
+        memory: "128Mi"
+      limits:
+        cpu: "300m"
+        memory: "256Mi"
+
 
