--- a/result-app-pod.yml
+++ b/result-app-pod.yml
@@ -19,3 +19,15 @@ spec:
       limits:
         cpu: "300m"
         memory: "256Mi"
+    env:
+    - name: POSTGRES_HOST
+      value: "db-service"
+    - name: POSTGRES_PORT
+      value: "5432"
+    - name: POSTGRES_USER
+      value: "postgres"
+    - name: POSTGRES_PASSWORD
+      value: "Naseem@123"
+    - name: POSTGRES_DB
+      value: "myDb"
+
