--- a/voting-app-pod.yml
+++ b/voting-app-pod.yml
@@ -11,3 +11,8 @@ spec:
    image: dockersamples/examplevotingapp_vote
    ports:
    - containerPort: 80
+   env:
+    - name: REDIS_HOST
+      value: "redis-service"
+    - name: REDIS_PORT
+      value: "6379"
