--- a/worker-app-pod.yml
+++ b/worker-app-pod.yml
@@ -17,5 +17,21 @@ spec:
       limits:
         cpu: "300m"
         memory: "256Mi"
+    env:
+      - name: REDIS_HOST
+        value: "redis-service"
+      - name: REDIS_PORT
+        value: "6379"
+      - name: POSTGRES_HOST
+        value: "db-service"
+      - name: POSTGRES_PORT
+        value: "5432"
+      - name: POSTGRES_USER
+        value: "postgres"
+      - name: POSTGRES_PASSWORD
+        value: "Naseem@123"
+      - name: POSTGRES_DB
+        value: "myDb"
+
 
 
